src/main/kubernetes/quarkus-test-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-service
  labels:
    app: quarkus-test
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      nodePort: 30090
  selector:
    app: quarkus-test
