src/main/kubernetes/quarkus-test-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: quarkus-ingress
  labels:
    app: quarkus-test
spec:
  rules:
    - http:
        paths:
          - path: /quarkus-test
            backend:
              serviceName: quarkus-service
              servicePort: 8080
